fix scale of 0 breaking command SERVER-1282